--- a/libuvccamera/src/main/res/values/strings.xml
+++ b/libuvccamera/src/main/res/values/strings.xml
@@ -28,4 +28,10 @@
     <string name="no_device">No USB camera found</string>
     <string name="permission_network" />
     <string name="permission_ext_storage" />
+    <string name="permission_audio">Audio recording permission is required</string>
+    <string name="permission_title">Permission Required</string>
+    <string name="permission_audio_recording_request">This app needs audio recording permission to record audio</string>
+    <string name="permission_camera_request">This app needs camera permission to access the camera</string>
+    <string name="permission_ext_storage_request">This app needs storage permission to save files</string>
+    <string name="permission_network_request">This app needs network permission to access the internet</string>
 </resources>
